# q-ctrl-playground

./: Introduction.ipynb  pyproject.toml  simulate_and_optimze.ipynb
boulderopal/: simulate_and_optimze.ipynb  single_qubit.ipynb
boulderopal/.ipynb_checkpoints/: single_qubit-checkpoint.ipynb  single_qubit_graph-checkpoint.ipynb
fireopal/.ipynb_checkpoints/: get_started-checkpoint.ipynb
