[tool.poetry]
name = "q-ctrl"
version = "0.1.0"
description = ""
authors = ["Jaric Thorning <jaric.thorning@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.7"
boulder-opal = "^1.3.2"
qctrl-visualizer = "^7.0.0"
qctrl-open-controls = "^10.0.1"
jupyterlab = "^4.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
