[tool.poetry]
name = "q-ctrl"
version = "0.1.0"
description = ""
authors = ["Jaric Thorning <jaric.thorning@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.7"
boulder-opal = "^1.3.2"
qctrl-visualizer = "^7.0.0"
qctrl-open-controls = "^10.0.1"
jupyterlab = "^4.1.0"
fire-opal = "^6.7.0"
qiskit = "^0.46.0"
matplotlib = "^3.8.2"
qiskit-ibm-runtime = "^0.18.0"
python-decouple = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
